--- a/templates/route.html
+++ b/templates/route.html
@@ -287,7 +287,7 @@
                 prius: distanceInKm * costPerKm * 1.6,
             };
         
-            document.querySelector('.ride-options').style.display = 'block';
+            // document.querySelector('.ride-options').style.display = 'block';
             document.getElementById('price-corolla').textContent = `BDT ${prices.corolla.toFixed(2)}`;
             document.getElementById('price-noah').textContent = `BDT ${prices.noah.toFixed(2)}`;
             document.getElementById('price-prado').textContent = `BDT ${prices.prado.toFixed(2)}`;
